@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+Drivers:
+* en::penn --> mul::upos conversion adjusted according to
+  https://github.com/UniversalDependencies/docs/issues/157
+  (verbal particles RP and alphanumeric list bullets LS)
+
+
+
 3.010     2017-11-27 21:11:31+01:00 Europe/Prague
 
 Drivers:
